Name:           mitigator
Version:        0.0.0
build-type:     Simple
License:        GPL
License-File:   LICENSE
Author:         HAILS team
Maintainer:	Deian Stefan  <deian at cs dot stanford dot edu>
Stability:      experimental
Synopsis:       Labeled IO Information Flow Control Library
Category:       Security
Cabal-Version:  >= 1.6

Description:
        Mitigator

Library
  Build-Depends: base >= 4 && < 5,
                 bytestring >= 0.9 && < 1,
                 containers >= 0.4.2 && < 5,
                 unix >= 2.3 && < 3,
                 mtl >= 1.1.0.2 && < 3,
                 clock>=0.2.0.0 && < 0.3

  ghc-options: -Wall
  Exposed-modules:
    MonadConcur,
    Mitigator,
    Mitigator.Time,
    MIO.Handle
